--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -4,6 +4,12 @@ url: /
 ---
 
 <div class="grid-container">
-  <h1>Welcome to Foundation for Apps!</h1>
-  <p class="lead">This is version <strong>1.1 Weisshorn</strong>.</p>
+  <h1>3 Elements Chiropractic & Wellness, PLLC</h1>
+  <p class="lead">Request an appointment time online:</p>
+  <div class="grid-block">
+    <div class="grid-container">
+      <h2>Hello World!</h2>
+    </div>
+  </div>
+
 </div>
