--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -6,10 +6,46 @@ url: /
 <div class="grid-container">
   <h1>3 Elements Chiropractic & Wellness, PLLC</h1>
   <p class="lead">Request an appointment time online:</p>
+
+
+  <!--Basic User Form Input Div -->
   <div class="grid-block">
     <div class="grid-container">
-      <h2>Hello World!</h2>
+        <form>
+          <label for="firstname">First Name:</label>
+          <input type="text" name="firstname" placeholder="Jane">
+
+          <label for="lastname">Last Name:</label>
+          <input type="text" name="lastname" placeholder="Doe">
+
+          <label for="birthday">Birthday:</label>
+          <input type="date" name="birthday">
+
+          <label for="phonenumber">Phone:</label>
+          <input type="tel" name="phonenumber" placeholder="555-555-5555">
+
+          <label for="email">Email:</label>
+          <input type="email" name="email" placeholder="You@Email.com">
+
+          <label for="email">Preferred Contact Method:</label>
+          <br>
+          <input type="radio" name="contactmethod" value="phone" checked>Phone
+          <br>
+          <input type="radio" name="contactmethod" value="email">Email
+          <br>
+          <input type="submit" value="Pick Appointment Time">
+        </form>
+
+
     </div>
   </div>
+  <!--End Basic User Form Input Div -->
 
+  <!--Progress Bar Start -->
+  <div class="grid-block">
+    <progress class="high" value="33" max="100"></progress>
+
+
+  </div>
+  <!--End Progress Bar -->
 </div>
