Created and linked to multiple views

--- a/client/templates/confirmation.html
+++ b/client/templates/confirmation.html
@@ -1,12 +1,11 @@
 ---
 name: confirmation
 url: /confirmation
-animationIn: fadeIn
-animationOut: fadeOut
+
 ---
 
 <div class="grid-container">
-  <h1>3 Elements Chiropractic & Wellness, PLLC</h1>
+  <h1>V3 3 Elements Chiropractic & Wellness, PLLC</h1>
   <p class="lead">Request an appointment time online:</p>
 
 
@@ -34,8 +33,6 @@ animationOut: fadeOut
           <input type="radio" name="contactmethod" value="phone" checked>Phone
           <br>
           <input type="radio" name="contactmethod" value="email">Email
-          <br>
-          <input type="submit" value="Pick Appointment Time">
         </form>
 
 
@@ -46,8 +43,13 @@ animationOut: fadeOut
   <!--Progress Bar Start -->
   <div class="grid-block">
     <progress class="high" value="100" max="100"></progress>
-
-
   </div>
   <!--End Progress Bar -->
+  <!--Begin Form Nave -->
+  <div>
+    <a ui-sref="appt-time">Prev</a>
+    <a ui-sref="submit">Submit</a>
+  </div>
+  <!--End Form Nav -->
+
 </div>
