--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -4,7 +4,7 @@ url: /
 ---
 
 <div class="grid-container">
-  <h1>3 Elements Chiropractic & Wellness, PLLC</h1>
+  <h1>V1 3 Elements Chiropractic & Wellness, PLLC</h1>
   <p class="lead">Request an appointment time online:</p>
 
 
@@ -33,7 +33,6 @@ url: /
           <br>
           <input type="radio" name="contactmethod" value="email">Email
           <br>
-          <input type="submit" value="Pick Appointment Time">
         </form>
 
 
@@ -44,8 +43,9 @@ url: /
   <!--Progress Bar Start -->
   <div class="grid-block">
     <progress class="high" value="33" max="100"></progress>
-
-
   </div>
   <!--End Progress Bar -->
+  <div>
+    <a ui-sref="appt-time" class="btn">Next</a>
+  </div>
 </div>
