Working on second view form

--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -1,2 +1,21 @@
 @import "settings";
 @import "foundation";
+
+.basic-form {
+  //width: 600px;
+  //min-height: 500px;
+}
+
+.logo, .instruction {
+  text-align: center;
+}
+
+.prev {
+  float: left;
+  width: 150px;
+}
+
+.next {
+  float: right;
+  width: 150px;
+}
