--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -4,13 +4,14 @@ url: /
 ---
 
 <div class="grid-container">
-  <h1>V1 3 Elements Chiropractic & Wellness, PLLC</h1>
-  <p class="lead">Request an appointment time online:</p>
+  <h1 class="logo">3 Elements Chiropractic & Wellness, PLLC</h1>
+  <p class="lead instruction">Request an appointment time online:</p>
 
 
   <!--Basic User Form Input Div -->
   <div class="grid-block">
     <div class="grid-container">
+      <div class="basic-form">
         <form>
           <label for="firstname">First Name:</label>
           <input type="text" name="firstname" placeholder="Jane">
@@ -28,14 +29,20 @@ url: /
           <input type="email" name="email" placeholder="You@Email.com">
 
           <label for="email">Preferred Contact Method:</label>
-          <br>
-          <input type="radio" name="contactmethod" value="phone" checked>Phone
-          <br>
-          <input type="radio" name="contactmethod" value="email">Email
-          <br>
+
+          <ul class="button-group segmented">
+            <li>
+              <input type="radio" name="method" value="email" id="contactmethodemail" checked="">
+              <label for="contactmethodemail">Email</label>
+            </li>
+            <li>
+              <input type="radio" name="method" value="phone" id="contactmethodphone">
+              <label for="contactmethodphone">Phone</label>
+            </li>
+          </ul>
         </form>
 
-
+      </div>
     </div>
   </div>
   <!--End Basic User Form Input Div -->
@@ -46,6 +53,7 @@ url: /
   </div>
   <!--End Progress Bar -->
   <div>
-    <a ui-sref="appt-time" class="btn">Next</a>
+    <a class="button disabled prev" ui-sref="home">Prev</a>
+    <a class="button next" ui-sref="appt-time" class="btn">Next</a>
   </div>
 </div>
